# crops

./: .gitignore  .pdm-python  pyproject.toml
crops/: __main__.py  api.py  config.py  downloader.py  parser.py  settings.json
src/: args.py  filesystem.py  main.py  parser.py
